Updated getting resource
